<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/TextEnterWeightsID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/adjust_comparison_weights"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#2962FF"
        android:padding="10dp"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10sp"
                android:text="@string/yearly_salary"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextYearlySalaryWeight"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10sp"
                android:text="@string/yearly_bonus"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextYearlyBonusWeight"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10sp"
                android:text="@string/restricted_stock_unit"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextRSUWeight"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10sp"
                android:text="@string/relocation_stipend"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextRelocationWeight"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10sp"
                android:text="@string/personal_holidays"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextHolidaysWeight"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/curJobSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="handleSaveClick"
            android:text="Save" />

        <Button
            android:id="@+id/curJobCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="handleCancelClick"
            android:text="Cancel" />
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>